# cli-weakauras-parser

./: .gitignore  Cargo.toml
.github/workflows/: Dockerfile  ci.yml  release.yml
base64/: Cargo.toml  LICENSE
base64/src/: byte_map.rs
base64/src/decode/: avx2.rs  mod.rs  scalar.rs  sse.rs
base64/src/encode/: avx2.rs  mod.rs  scalar.rs  sse.rs
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
core/: Cargo.toml
core/src/: lib.rs  value.rs
core/src/ace_serialize/deserialization/: mod.rs
core/src/ace_serialize/serialization/: mod.rs
core/src/lib_serialize/: mod.rs
core/src/lib_serialize/deserialization/: mod.rs
core/src/lib_serialize/serialization/: mod.rs
huffman/: Cargo.toml
huffman/src/: lib.rs  lookup_table.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/ace_serialize/deserialization/: mod.rs  reader.rs
parser/src/ace_serialize/serialization/: mod.rs
parser/src/base64/: mod.rs
parser/src/base64/decode/: sse.rs
parser/src/huffman/: lookup_table.rs  mod.rs
parser/src/lib_serialize/deserialization/: mod.rs
parser/src/lib_serialize/serialization/: mod.rs
parser/src/value/: mod.rs
src/: main.rs  utils.rs
