[package]
name = "cli_weakauras_parser"
version = "0.1.3"
authors = ["Velithris"]
edition = "2021"
license = "MIT"

[dependencies]
clap = "4"
weakauras_parser = { path = "../core", features = ["serde", "indexmap"] }
serde_json = "1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
