[package]
name = "weakauras_parser"
version = "0.1.5"
authors = ["Velithris"]
edition = "2024"
license = "MIT"

[dependencies]
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }

itoa = "1"
ryu = "1"

serde = { version = "1", optional = true }
indexmap = { version = "1", optional = true }
fnv = { version = "1", optional = true }

wa_base64 = { path = "../base64", package = "weakauras_parser_base64" }
huffman = { path = "../huffman", package = "weakauras_parser_huffman" }
